# configuration_app

./: .gitignore  CMakeLists.txt  LICENSE  README.md
C3D/: .gitignore
Qt/: CMakeLists.txt  buildassembly.cpp  buildmathmodel.cpp  buildmathmodel.h  buildparams.h  controller.cpp  controller.h  explodemanager.cpp  explodemanager.h  explodetree.cpp  explodetree.h  explodewidget.cpp  explodewidget.h  explodewidget.qrc  main.cpp
Qt/IP_details/: details_IP.cpp
Qt/IU_details/: Kozhuh_IY.cpp  details_IY.cpp
Qt/TTORdetails/: MPST.001.001_ТрубаТеплообменная.cpp  MPST.001.002_ТрубаКожуховая.cpp  MPST.001.003_Опора.cpp  MPST.001.004_РешеткаКожуховыхТруб.cpp  MPST.001.005_Камера.cpp  MPST.001.006_РешеткаТеплообменныхТруб.cpp  MPST.001.007_ФланецКожух.cpp  MPST.001.008_ФланецСпециальный.cpp  MPST.001.010_Соединение.cpp  MPST.001.011_СоединениеСФланцами.cpp  MPST.001.012_ТрубаИзгибБольшая.cpp  MPST.001.012_Фланец_соединительный.cpp
Qt/TTORdetails/GOSTDetails/: M1.6 X 0.35.a3d  M1.6 X 0.35_1.a3d  M1.6 X 0.35_2.a3d  M10 X 1.5.a3d  M12 X 1.75.a3d  M14 X 2.0.a3d  M16 X 2.0.a3d  M18 X 2.25.a3d  M2 X 0.4.a3d  M2.5 X 0.45.a3d  M20 X 2.25.a3d  M22 X 2.25.a3d  M24 X 3.0.a3d  M27 X 3.0.a3d  M3 X 0.5.a3d  M30 X 3.5.a3d  M36 X 4.0.a3d  M4 X 0.7.a3d  M42 X 4.5.a3d  M48 X 5.0.a3d  M5 X 0.8.a3d  M56 X 5.5.a3d  M6 X 1.0.a3d  M64 X 6.0.a3d  M8 X 1.25.a3d  Болт M1.6 X 0.35.c3d  Гайка M1.6 X 0.35.c3d  Шайба M1.6 X 0.35.c3d  импортированная__1.m3d  импортированная__10.m3d  импортированная__11.m3d  импортированная__12.m3d  импортированная__13.m3d  импортированная__14.m3d  импортированная__15.m3d  импортированная__16.m3d  импортированная__17.m3d  импортированная__18.m3d  импортированная__19.m3d  импортированная__2.m3d  (+64 more)
Qt/TTORdetails/TTOR_GHOST/: Болт.cpp  Гайка.cpp  Шайба.cpp
Qt/TTRMdetails/: TTRM.001.001_ТрубаТеплообменная.cpp  TTRM.001.002_ТрубаКожуховая.cpp  TTRM.001.003_Опора.cpp  TTRM.001.004_РешеткаКожуховыхТруб.cpp  TTRM.001.005_Камера.cpp  TTRM.001.006_РешеткаТеплообменныхТруб.cpp  TTRM.001.008_ФланецСпециальный.cpp  TTRM.001.009_ТрубаИзгиб.cpp  TTRM.001.010_Держатель.cpp  TTRM_GOSTS.cpp
Qt/details/: MPST.001.003_Опора.cpp  MPST.001.004_РешеткаКожуховыхТруб.cpp  MPST.001.006_РешеткаТеплообменныхТруб.cpp  MPST.001.007_ФланецКожух.cpp  MPST.001.009_ТрубаИзгиб.cpp
Qt/detailsZarubin/: MPST.001.001_ТрубаТеплообменная.cpp  MPST.001.002_ТрубаКожуховая.cpp  MPST.001.003_Опора.cpp  MPST.001.004_РешеткаКожуховыхТруб.cpp  MPST.001.005_Камера.cpp  MPST.001.007_ФланецКожух.cpp  MPST.001.008_ФланецСпециальный.cpp  MPST.001.009_ТрубаИзгиб.cpp
Qt/solver/: assemblysolver.cpp  assemblysolver.h  prbase.cpp  prbase.h  prbinconstraint.cpp  prbinconstraint.h
QtVision/: CMakeLists.txt
QtVision/Include/: qt_aboutscenewidget.h  qt_headsuptoolbar.h  qt_openglcontext.h  qt_openglwidget.h  qt_openglwidgetprivate.h  qt_openglwindow.h
QtVision/src/: qt_aboutscenewidget.cpp  qt_headsuptoolbar.cpp  qt_openglcontext.cpp  qt_openglwidget.cpp  qt_openglwidget.qrc  qt_openglwindow.cpp
Shared/: scenegenerator.cpp  scenegenerator.h
